Fix filter button flickering in events view

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -1345,10 +1345,6 @@ tr.ticket:hover {
     font-size: .8em;
 }
 
-.js .occurrences-filter-date-submit {
-    display: none;
-}
-
 /*
     Events
 */
